<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        card_view:cardBackgroundColor="@color/coloWhite"
        android:layout_marginBottom="8dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_height="180dp">

            <TextView
                android:id="@+id/scoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorOrange"
                android:text="@string/score" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scoreTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="181dp"
                android:layout_marginLeft="181dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="11dp"
                android:layout_marginRight="11dp"
                android:text="@string/name"
                android:textColor="@color/colorText"
                android:textSize="19sp" />

            <ImageView
                android:id="@+id/deleteImageVIew"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/all"
                card_view:srcCompat="@drawable/ic_delete"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/editImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:layout_toStartOf="@+id/deleteImageVIew"
                android:layout_toLeftOf="@+id/deleteImageVIew"
                card_view:srcCompat="@drawable/ic_edit"
                android:contentDescription="@string/all"
                tools:ignore="VectorDrawableCompat" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/animeCardView"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp">

        <ImageView
            android:id="@+id/animeImageView"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/all"
            android:scaleType="center"
            android:src="@drawable/egg" />

        <View
            android:id="@+id/view"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:background="#2A000000" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>