<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/coloWhite"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:text="@string/title_edit"
                    android:textColor="@color/coloWhite"
                    android:textSize="32sp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                app:cardCornerRadius="40dp"
                app:cardBackgroundColor="@color/coloWhite"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginBottom="32dp"
                    android:layout_marginRight="8dp">

                    <TextView
                        android:id="@+id/nameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/name_name"
                        android:textColor="@color/colorText"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_below="@+id/nameTextView"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="-4dp"
                        android:layout_marginRight="24dp"
                        android:autofillHints="@string/name_name"
                        android:background="@drawable/ic_field"
                        android:ems="80"
                        android:hint="@string/name_name"
                        android:inputType="textAutoComplete"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp" />

                    <EditText
                        android:id="@+id/scoreEditText"
                        android:layout_width="160dp"
                        android:layout_height="56dp"
                        android:layout_below="@+id/scoreTextView"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:autofillHints="@string/name_score"
                        android:background="@drawable/ic_field"
                        android:ems="3"
                        android:hint="@string/name_score"
                        android:inputType="number"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp" />

                    <TextView
                        android:id="@+id/scoreTextView"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nameEditText"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:text="@string/name_score"
                        android:textColor="@color/colorText"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/episodeEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:layout_below="@+id/episodeTextView"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_toEndOf="@+id/scoreEditText"
                        android:layout_toRightOf="@+id/scoreEditText"
                        android:autofillHints="@string/name_episode"
                        android:background="@drawable/ic_field"
                        android:ems="10"
                        android:hint="@string/name_episode"
                        android:inputType="number"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp" />

                    <TextView
                        android:id="@+id/episodeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nameEditText"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_toEndOf="@+id/scoreTextView"
                        android:layout_toRightOf="@+id/scoreTextView"
                        android:text="@string/name_episode"
                        android:textColor="@color/colorText"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/descriptionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_below="@+id/descriptionTextView"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="21dp"
                        android:layout_marginLeft="21dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="24dp"
                        android:autofillHints="@string/name_description"
                        android:background="@drawable/ic_field"
                        android:ems="255"
                        android:gravity="clip_vertical"
                        android:hint="@string/name_description"
                        android:inputType="textMultiLine"
                        android:lines="8"
                        android:maxLines="16"
                        android:minLines="8"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp" />

                    <TextView
                        android:id="@+id/descriptionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/scoreEditText"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="25dp"
                        android:text="@string/name_description"
                        android:textColor="@color/colorText"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/urlEditText"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_below="@+id/urlTextView"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="24dp"
                        android:autofillHints="@string/name_url"
                        android:background="@drawable/ic_field"
                        android:ems="450"
                        android:hint="@string/name_url"
                        android:inputType="textUri"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp" />

                    <TextView
                        android:id="@+id/urlTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/descriptionEditText"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="24dp"
                        android:text="@string/name_url"
                        android:textColor="@color/colorText"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/animeButton"
                        android:layout_width="240dp"
                        android:layout_height="56dp"
                        android:layout_below="@+id/urlEditText"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/ic_btn"
                        android:gravity="center"
                        android:text="@string/save"
                        android:textColor="@color/coloWhite"
                        android:textSize="20sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>